--- a/setup.cfg
+++ b/setup.cfg
@@ -25,14 +25,14 @@ zip_safe = no
 
 [options.extras_require]
 testing =
-    # pytest>=6.0
-    # pytest-cov>=2.0
-    # mypy>=0.910
-    # flake8>=3.9
-    # tox>=3.24
+    pytest>=6.0
+    pytest-cov>=2.0
+    mypy>=0.910
+    flake8>=3.9
+    tox>=3.24
 
 [options.package_data]
 solver = py.typed
 
-# [flake8]
-# max-line-length = 160
+[flake8]
+max-line-length = 160
