--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ zip_safe = no
 testing =
     pytest>=6.0
     pytest-cov>=2.0
+    pytest-timeout>=2.0
     mypy>=0.910
     flake8>=3.9
     tox>=3.24
