--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,8 @@ classifiers =
 [options]
 packages =
     solver
-# install_requires =
-#     requests>=2
+install_requires =
+    Pillow>=8.0
 python_requires = >=3.6
 package_dir =
     =src
